<resources>
    <string name="app_name">2step</string>
    <string name="hint_totp_secret_input">设置秘钥</string>
    <string name="hint_totp_name_input">名称，如Google</string>
    <string name="hint_totp_account_input">用户名或邮箱</string>
    <string name="text_add_totp_submit">提交</string>
    <string name="label_input_scan">扫码</string>
    <string name="label_input_manual">手动输入</string>
    <string name="hint_search_bar">搜索</string>
    <string name="hint_server_url">webdav服务器地址</string>
    <string name="hint_server_account">账号</string>
    <string name="hint_server_password">密码</string>
    <string name="text_jianguo_url">https://dav.jianguoyun.com/dav</string>
    <string name="label_settings_sync">同步设置</string>
    <string name="label_settings_about">关于</string>
    <string name="label_settings_license">开源协议</string>
    <string name="label_settings_sync_NONE">None</string>
    <string name="label_settings_sync_webdav">WebDAV</string>
    <string name="label_settings_sync_onedrive">OneDrive</string>
    <string name="label_settings_sync_google_drive">Google Drive</string>
    <string-array name="label_sync_methods">
        <item>@string/label_settings_sync_NONE</item>
        <item>@string/label_settings_sync_webdav</item>
    </string-array>
    <string name="label_settings_sync_method">同步方式</string>
    <string name="text_settings_sync_save">保存</string>
    <string name="label_settings_sync_none_notice"><b>注意：</b>\n当前同步是<b>关闭</b>状态，这意味着不会将客户端的数据同步到其他服务中。\n若您主动清除APP数据您的数据将会丢失！</string>
    <string name="toast_camera_permission_denied">您拒绝了相机权限，无法通过扫码添加</string>
    <string name="error_totp_input_name">两步验证账号名称不能为空</string>
    <string name="error_totp_input_account">请输入两步验证账号名称</string>
    <string name="error_totp_input_secret">请输入两步验证账号秘钥</string>
    <string name="toast_totp_check_secret">请输入两步验证账号秘钥</string>
    <string name="error_totp_check_digits">请输入两步验证数字长度</string>
    <string name="error_totp_check_period">请输入两步验证周期</string>
    <string name="snackbar_totp_copy">复制成功</string>
    <string name="toast_settings_save_success">保存成功</string>
    <string name="toast_scan_check_camera">请检查您的设备是否支持相机模块且授予了权限</string>
    <string name="hint_totp_digits_input">长度</string>
    <string name="hint_totp_period_input">周期</string>
    <string name="label_totp_digits_default" translatable="false">6</string>
    <string name="label_totp_period_default" translatable="false">30</string>
    <string name="toast_totp_parse_failed">添加失败，请检查是否正确</string>
    <string name="label_profile_migrate">迁移</string>
    <string name="label_settings_import">导入</string>
    <string name="label_settings_export">导出</string>
    <string name="label_toolbar_settings">设置</string>
    <string name="label_settings_header_prefs">个性化</string>
    <string name="description_settings_import">从其他TOTP软件导入</string>
    <string name="description_settings_export">导出文件，以便导入到其他软件</string>
    <string name="label_settings_github" translatable="false">Github</string>
    <string name="description_settings_github" translatable="false">opoojkk</string>
    <string name="label_import_secret">xml格式，支持数组，uri符合Google符合otpauth标准</string>
    <string name="label_import_add">添加</string>
    <string name="toast_totp_is_empty">暂无TOTP数据</string>
    <string name="label_settings_repo" translatable="false">Repositories</string>
    <string name="description_settings_repo" translatable="false">https://github.com/opoojkk/2step</string>
    <string name="label_settings_libraries">开源库</string>
    <string name="label_settings_library_androidx" translatable="false">Androidx</string>
    <string name="description_settings_library_androidx" translatable="false">AndroidX is a set of libraries designed to make Android app development more consistent, efficient, and maintainable.</string>
    <string name="label_settings_library_multitype" translatable="false">multitype</string>
    <string name="description_settings_library_multitype" translatable="false">Easier and more flexible to create multiple types for Android RecyclerView.</string>
    <string name="label_settings_library_speed_dial" translatable="false">multitype</string>
    <string name="description_settings_library_speed_dial" translatable="false">Android library providing an implementation of the Material Design Floating Action Button Speed Dial for both classic View and Compose.</string>
    <string name="label_settings_library_sardine_android" translatable="false">sardine-android</string>
    <string name="description_settings_library_sardine_android" translatable="false">A WebDAV client for Android, using OkHttp as HTTP client.</string>
    <string name="label_settings_library_mmkv" translatable="false">MMKV</string>
    <string name="description_settings_library_mmkv" translatable="false">MMKV is an efficient, small, easy-to-use mobile key-value storage framework used in the WeChat application.</string>
    <string name="label_settings_library_gson" translatable="false">Gson</string>
    <string name="description_settings_library_gson" translatable="false">Gson is a Java library that can be used to convert Java Objects into their JSON representation.</string>
    <string name="toast_export_success">导出成功，请到文档下查看json格式文件</string>
</resources>