<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.totp.InputManualActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/px_15"
        android:paddingTop="@dimen/px_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="@dimen/px_40"
            android:layout_height="@dimen/px_40"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/icon_back" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingHorizontal="@dimen/px_16"
            android:paddingVertical="@dimen/px_8"
            android:text="@string/text_settings_sync_save"
            android:textColor="#333333"
            android:textSize="@dimen/px_16" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/secret_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/px_12"
        android:layout_marginTop="@dimen/px_24"
        android:hint="@string/hint_totp_secret_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/secret_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_25"
        android:hint="@string/hint_totp_name_input"
        app:layout_constraintEnd_toEndOf="@+id/secret_input"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/secret_input"
        app:layout_constraintTop_toBottomOf="@+id/secret_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_25"
        android:hint="@string/hint_totp_account_input"
        app:layout_constraintEnd_toEndOf="@+id/name_input"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/name_input"
        app:layout_constraintTop_toBottomOf="@+id/name_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/digits_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_25"
        android:hint="@string/hint_totp_digits_input"
        app:layout_constraintEnd_toEndOf="@+id/account_input"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/account_input"
        app:layout_constraintTop_toBottomOf="@+id/account_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/digits_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_totp_digits_default" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/period_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_25"
        android:hint="@string/hint_totp_period_input"
        app:layout_constraintEnd_toEndOf="@+id/digits_input"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/digits_input"
        app:layout_constraintTop_toBottomOf="@+id/digits_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/period_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_totp_period_default" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>