<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SyncSettingsActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/icon_back" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/text_settings_sync_save"
        android:textColor="#333333"
        android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/sync_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:paddingStart="16dp"
        android:text="@string/label_settings_sync_method"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/sync_menu_text_layout"
        app:layout_constraintEnd_toStartOf="@+id/sync_menu_text_layout"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sync_menu_text_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sync_menu_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sync_text_view"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <AutoCompleteTextView
            android:id="@+id/sync_auto_complete_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_url_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_server_url"
        app:layout_constraintEnd_toEndOf="@+id/sync_menu_text_layout"
        app:layout_constraintStart_toStartOf="@+id/sync_text_view"
        app:layout_constraintTop_toBottomOf="@+id/sync_menu_text_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/server_url_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_jianguo_url" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_server_account"
        app:layout_constraintEnd_toEndOf="@+id/server_url_layout"
        app:layout_constraintStart_toStartOf="@+id/server_url_layout"
        app:layout_constraintTop_toBottomOf="@+id/server_url_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_server_password"
        app:layout_constraintEnd_toEndOf="@+id/account_input"
        app:layout_constraintStart_toStartOf="@+id/account_input"
        app:layout_constraintTop_toBottomOf="@+id/account_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sync_none_notice_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_settings_sync_none_notice"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/sync_menu_text_layout"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/sync_text_view"
        app:layout_constraintTop_toTopOf="@+id/server_url_layout" />

    <androidx.constraintlayout.helper.widget.Layer
        android:id="@+id/layer_webdav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="server_url_layout,account_input,password_input"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>