<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_dialog_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dp_15"
    android:background="@color/md_theme_surface"
    android:fitsSystemWindows="true"
    android:paddingVertical="@dimen/dp_12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/settings_sync_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:lines="1"
            android:maxLines="1"
            android:paddingVertical="@dimen/dp_8"
            android:text="@string/label_settings_sync"
            android:textColor="#666666"
            android:textSize="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/settings_about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:lines="1"
            android:maxLines="1"
            android:paddingVertical="@dimen/dp_8"
            android:text="@string/label_settings_about"
            android:textColor="#666666"
            android:textSize="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="@+id/settings_sync_text"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/settings_sync_text"
            app:layout_constraintTop_toBottomOf="@+id/settings_sync_text" />

        <Button
            android:id="@+id/settings_license_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:lines="1"
            android:maxLines="1"
            android:paddingVertical="@dimen/dp_8"
            android:text="@string/label_settings_license"
            android:textColor="#666666"
            android:textSize="@dimen/dp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/settings_about_text"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/settings_about_text"
            app:layout_constraintTop_toBottomOf="@+id/settings_about_text" />
    </LinearLayout>

</RelativeLayout>